--- a/templates/base.html
+++ b/templates/base.html
@@ -10,18 +10,23 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {% block head %}{% endblock %}
   </head>
-  <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-danger ">
-            <a class="navbar-brand" href="/" id="logo"><i class="fas fa-film"></i> BestFlix</a>
-            <div class="navbar-nav">
-                <li class="nav-item"></li>
-                <li class="nav-item"></li>
-            </div>
-            <div class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link"><i class="fas fa-user-plus"></i> Register</a></li>
-                    <li class="nav-item"><a class="nav-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-            </div>
-        </nav>
-        {% block body %} {% endblock %}
+  <body style="background-color: rgb(78, 32, 32);">
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger ">
+        <a class="navbar-brand" href="/" id="logo"><i class="fas fa-film"></i> BestFlix</a>
+        <form class="form-inline" action="/search_redirect" method="POST" style="padding-left: 41rem;">
+            <input class="form-control mr-sm-2" name="search_term" type="search" placeholder="Movies, Stars, Directors..." aria-label="Search">
+            <button class="btn btn-dark" type="submit">Search</button>
+        </form>
+        <div class="navbar-nav">
+          <li class="nav-item"></li>
+          <li class="nav-item"></li>
+        </div>
+        <div class="navbar-nav ml-auto">
+          <li class="nav-item"><a class="nav-link"><i class="fas fa-user-plus"></i> Register</a></li>
+          <li class="nav-item"><a class="nav-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        </div>
+    </nav>
+    {% block body %} {% endblock %}
+    
 </body>
 </html>
