--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,22 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {% block head %}{% endblock %}
   </head>
-  <body style="background-color: rgb(78, 32, 32);">
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger ">
+  <script>
+    function searchTextToParameter(){
+      searchText = document.getElementById('search_term');
+      searchForm = document.getElementById('searchForm');
+      searchForm.action = "/search?search_term=" + searchText.value;
+    }
+  </script>
+  <body style="background-color: #292F36;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F25757">
         <a class="navbar-brand" href="/" id="logo"><i class="fas fa-film"></i> BestFlix</a>
-        <form class="form-inline" action="/search_redirect" method="POST" style="padding-left: 41rem;">
-            <input class="form-control mr-sm-2" name="search_term" type="search" placeholder="Movies, Stars, Directors..." aria-label="Search">
-            <button class="btn btn-dark" type="submit">Search</button>
-        </form>
+        <div class="navbar-nav">
+          <form class="form-inline" action="javascript:void(0);" method="POST" id="searchForm">
+              <input style="width: 300px;" class="form-control mr-sm-2" name="search_term" id="search_term" type="search" placeholder="Movies, Stars, Directors, Genres..." aria-label="Search" required>
+              <button class="btn btn-dark" type="submit" onclick="searchTextToParameter()">Search</button>
+          </form>
+        </div>
         <div class="navbar-nav">
           <li class="nav-item"></li>
           <li class="nav-item"></li>
@@ -27,6 +36,5 @@
         </div>
     </nav>
     {% block body %} {% endblock %}
-    
 </body>
 </html>
