--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
         <div class="col-sm-2">
 
         </div>
-        <div class="col-sm-8">
-            
+        <div class="col-sm-8 text-light">
+            {{ test }}
         </div>
         <div class="col-sm-2">
             
