--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,26 @@
 {% block body %}
     <div class="row">
         <div class="col-sm-2">
+            <div class="container-fluid text-light">
+                <h1>Explore Genres</h1>
+                <div class="btn-group-vertical btn-group-lg" role="group">
+                    <a href="/search?search_term=Action"class="btn btn-dark btn-lg">Action</a>
+                    <a href="/search?search_term=Adventure"class="btn btn-dark btn-lg">Adventure</a>
+                    <a href="/search?search_term=Animation"class="btn btn-dark btn-lg">Animation</a>
+                    <a href="/search?search_term=Biography"class="btn btn-dark btn-lg">Biography</a>
+                    <a href="/search?search_term=Comedy"class="btn btn-dark btn-lg">Comedy</a>
+                    <a href="/search?search_term=Crime"class="btn btn-dark btn-lg">Crime</a>
+                    <a href="/search?search_term=Drama"class="btn btn-dark btn-lg">Drama</a>
+                    <a href="/search?search_term=Horror"class="btn btn-dark btn-lg">Horror</a>
+                    <a href="/search?search_term=Mystery"class="btn btn-dark btn-lg">Mystery</a>
+                    <a href="/search?search_term=Sci-Fi"class="btn btn-dark btn-lg">Sci-Fi</a>
+                  </div>
 
-        </div>
-        <div class="col-sm-8 text-light">
-            {{ test }}
+
+        </div>    
+        <div class="col-sm-8 ">
+
+            </div>
         </div>
         <div class="col-sm-2">
             
