--- a/templates/movie.html
+++ b/templates/movie.html
@@ -11,28 +11,39 @@
 
 
 <div class="row">
-    <div class="col-sm-4">
-
+    <div class="col-sm-2">
+        <img style="width:300px;padding:10px" src="https://bestflix.s3-ap-southeast-2.amazonaws.com/{{ movie['movieid']}}.jpg" alt="{{ movie['title'] }}">
     </div>
-    <div class="col-sm-4">
-        <div class="container-fluid  text-center text-light">
-            {% if movie != None %}
-                <h1>{{ movie['title'] }} <div class="mb-2 text-muted"> ({{ movie['released'][6:10] }}) </div></h1>
-                <div class="container text-dark" style="width: 24rem;">
-                    <ul class="list-group">
-                        <li class="list-group-item">Genre: {{ movie['genre'] }}</li>
-                        <li class="list-group-item">Classification: {{ movie['classification'] }}</li>
-                        <li class="list-group-item">Starring: {{ movie['star'] }}</li>
-                        <li class="list-group-item">Runtime: {{ movie['runtime'] }} ({{ runtime_readable }})</li>
-                    </ul>
-                </div>
-            {% else %}
-                <h1>Movie Not Found</h1>
-                <a style="color: black ;" href="/" class="btn btn-link" role="button">Return Home</a>
+    <div class="col-sm-7">
+        <div style="padding-top: 10px;" class="container-fluid text-left text-light">
+            <h1>{{ movie['title'] }} <span class="mb-2 text-muted"> ({{ movie['released'][6:10] }}) </span></h1>
+            <h4>Starring {{ movie['star'] }}</h4>
+            <h4>Directed by {{ movie['director'] }} </h4>
+            <i><h4>{{ movie['company'] }} </h4></i>
+            <h5> {{movie['genre']  }} | Rated {{ movie['classification'] }}</h5>
+            <h6 class="text-muted">Runtime: {{ movie['runtime'] }} ({{ runtime_readable }})</h6>
+            {% if session.logged_in %}
+                {% if not user_already_favourited %}
+                    <form action="/movie/{{ movie['movieid']}}" method="POST">
+                        <input type="hidden" name="form-type" value="favourite_add">
+                        <input type="hidden" id="movieid" name="movieid" value="{{ movie['movieid']}}">
+                        <input type="hidden" name="callback" value="/movie/{{ movie['movieid']}}">
+                        <button type="submit" class="btn btn-warning"><i class="fas fa-star"></i> Favourite</button>
+                    </form>
+                {% else %}
+                    <form action="/movie/{{ movie['movieid']}}" method="POST">
+                        <input type="hidden" name="form-type" value="favourite_remove">
+                        <input type="hidden" id="movieid" name="movieid" value="{{ movie['movieid']}}">
+                        <input type="hidden" name="callback" value="/movie/{{ movie['movieid']}}">
+                        <button style="width: 8rem;background-color: #ba8e09; border-color: #ba8e09;"  onmouseover="giveRemoveOption('in')" onmouseout="giveRemoveOption('out')" type="submit" id="favouritedButton" class="btn btn-warning text-center">
+                            <i class="fas fa-check-circle"></i> Favourited
+                        </button>
+                    </form>
+                {% endif %}
             {% endif %}
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="container-fluid text-center text-light">
                 <h4>Leave a Review</h4>
                 {% if show_post_error == True %}
@@ -41,7 +52,7 @@
                     </div>
                 {% endif %}
                 <div style="display:none" id="noVoteAlert" class="alert alert-dark" role="alert">
-                    Please vote the movie up or down
+                        Please vote the movie up or down
                 </div>
                 <form action="javascript:void(0);" method="post" id="reviewForm" style="padding-bottom: 2rem;">
                     <div class="form-group">
@@ -53,6 +64,8 @@
                     </div>
                     <input type="hidden" id="voteValue" name="voteValue" value="none">
                     <input type="hidden" id="movieid" name="movieid" value="{{ movie['movieid']}}">
+                    <input type="hidden" name="form-type" value="review">
+                    <input type="hidden" name="callback" value="/movie/{{ movie['movieid']}}">
                     <input class="btn btn-dark" type="submit" onclick="mustGiveVote(movieid.value)" value="Post">
                 </form>
                 {% for review in reviews %}
@@ -68,7 +81,7 @@
                                 </div>
                                 <div class="col-sm-9">
                                     <p class="card-text">{{ review['review_text'] }}</p>
-                                    <h6 class="card-subtitle mb-2 text-muted">- {{ review['user'] }}</h6>
+                                    <a style="color: white;" href="/user/{{ review['user'] }}" class="btn btn-link"><h6 class="card-subtitle mb-2 text-muted">- {{ review['user'] }}</h6></a>
                                 </div>
                             </div>
                         </div>
@@ -79,4 +92,18 @@
         </div>
     </div>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/script.js') }}"></script>
+<script>
+    function giveRemoveOption(inorout) {
+        const favouritedButton = document.getElementById('favouritedButton');
+        if(inorout == "in"){
+            favouritedButton.style.backgroundColor = "#dc3545";
+            favouritedButton.style.borderColor = "#dc3545";
+            favouritedButton.innerHTML = "<i class='fas fa-ban'></i> Remove";
+        } else if (inorout == "out"){
+            favouritedButton.style.backgroundColor = "#ba8e09";
+            favouritedButton.style.borderColor = "#ba8e09";
+            favouritedButton.innerHTML = "<i class='fas fa-check-circle'></i> Favourited";
+        }
+    }
+</script>
 {% endblock %}
