--- a/templates/search.html
+++ b/templates/search.html
@@ -10,31 +10,28 @@
     <div class="row">
         <div class="col-sm-4">
         </div>
-        <div class="col-sm-4 text-center">
-            <div class="container-fluid text-light">
-                <h1>Search Results for '{{ search_term }}'</h1>
-                <h2 class="text-muted">({{ movies|length() }})</h2>
+        <div class="col-sm-4">
+            <div class="container-fluid text-light text-left">
+                <h1 class="text-center">Search Results for '{{ search_term }}'</h1>
+                <h2 class="text-muted text-center">({{ movies|length() }})</h2>
+                <!-- <h2 class="text-muted text-center">Pages: {{ (movies|length()/10)|round|int + 1}} and {{ (movies|length()%10)|round|int }} items on last page</h2> -->
                 {% for movie in movies %}
-                    <a class="text-left "href="/movie/{{ movie['movieid']}}">
-                        <div class="card bg-dark text-white">
-                            <div class="row">
-                                <div class="col-sm-2">
-                                    <img style="height: 100px;" src="https://bestflix.s3-ap-southeast-2.amazonaws.com/{{ movie['movieid']}}.jpg" alt="{{ movie['title'] }}">
-                                </div>
-                                <div class="col-sm-10">
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ movie['title']|title() }}</h5>
-                                        <h6 class="card-subtitle mb-2 text-muted">{{ movie['released'][6:10] }} • Starring: {{ movie['star']|title() }}</h6>
-                                    </div>
+                    <div class="card bg-dark text-white">
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <img style="height: 120px;" src="https://bestflix.s3-ap-southeast-2.amazonaws.com/{{ movie['movieid']}}.jpg" alt="{{ movie['title'] }}">
+                            </div>
+                            <div class="col-sm-7">
+                                <div class="card-body">
+                                    <a style="color: white;" href="/movie/{{ movie['movieid'] }}" class="btn btn-link"><h5 class="card-title">{{ movie['title']|title() }}</h5></a>
+                                    <h6 class="card-subtitle mb-2 text-muted">{{ movie['released'][6:10] }} • Starring: {{ movie['star']|title() }}</h6>
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 {% endfor %}
             </div>
-
-
-            </div>
+        </div>
         <div class="col-sm-4">
         </div>
     </div>
