--- a/templates/movie.html
+++ b/templates/movie.html
@@ -91,19 +91,5 @@
             </div>
         </div>
     </div>
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/script.js') }}"></script>
-<script>
-    function giveRemoveOption(inorout) {
-        const favouritedButton = document.getElementById('favouritedButton');
-        if(inorout == "in"){
-            favouritedButton.style.backgroundColor = "#dc3545";
-            favouritedButton.style.borderColor = "#dc3545";
-            favouritedButton.innerHTML = "<i class='fas fa-ban'></i> Remove";
-        } else if (inorout == "out"){
-            favouritedButton.style.backgroundColor = "#ba8e09";
-            favouritedButton.style.borderColor = "#ba8e09";
-            favouritedButton.innerHTML = "<i class='fas fa-check-circle'></i> Favourited";
-        }
-    }
-</script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/script.js') }}" defer></script>
 {% endblock %}
