--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {% block head %}{% endblock %}
   </head>
-  <script>
+  <script defer>
     function searchTextToParameter(){
       searchText = document.getElementById('search_term');
       searchForm = document.getElementById('searchForm');
@@ -36,12 +36,25 @@
             <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
           </div>
         {% else %}
-            <div class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link" href="{{ url_for('register')}}"><i class="fas fa-user-plus"></i> Register</a></li>
-              <li class="nav-item"><a class="nav-link" href="{{ url_for('login')}}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-            </div>
+          <div class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('register')}}"><i class="fas fa-user-plus"></i> Register</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('login')}}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+          </div>
         {% endif %}
     </nav>
+    
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+          <!-- <p class="text-light" >{{ message }}</p> -->
+          <div class="container" style="width: 35rem;">
+            <div id="alreadyReviewedAlert" class="alert alert-dark text-center" role="alert">
+              {{ message }}
+            </div>
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
     {% block body %} {% endblock %}
 </body>
 </html>
