Amazon SNS partially implemented. changed images to load from Amazon Cloudfront CDN. Added random selection of movies to homepage.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 {% block body %}
     <div class="row">
         <div class="col-sm-2">
-            <div class="container-fluid text-light">
+            <div style="width: 20rem;" class="container-fluid text-light">
                 <h1>Explore Genres</h1>
-                <div class="btn-group-vertical btn-group-lg" role="group">
+                <div style="width: 18rem;" class="btn-group-vertical btn-group-lg" role="group">
                     <a href="/search?search_term=Action"class="btn btn-dark btn-lg">Action</a>
                     <a href="/search?search_term=Adventure"class="btn btn-dark btn-lg">Adventure</a>
                     <a href="/search?search_term=Animation"class="btn btn-dark btn-lg">Animation</a>
@@ -21,14 +21,17 @@
                     <a href="/search?search_term=Horror"class="btn btn-dark btn-lg">Horror</a>
                     <a href="/search?search_term=Mystery"class="btn btn-dark btn-lg">Mystery</a>
                     <a href="/search?search_term=Sci-Fi"class="btn btn-dark btn-lg">Sci-Fi</a>
-                  </div>
-        </div>    
-        <div class="col-sm-8 ">
-
+                </div>
             </div>
-        </div>
-        <div class="col-sm-2">
-            
+        </div>    
+        <div class="col-sm-8 text-light">
+            <h1>Explore Movies</h1>
+            {% for movie in random_movies %}
+                <a href="/movie/{{ movie }}">
+                    {% set cloudfront_url = "https://d36grsljei4sj1.cloudfront.net" %}
+                    <img style="width: 200px; height: 300px" class="card-img" src="{{ cloudfront_url }}/{{ movie }}.jpg">
+                </a>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
